<resources>
    <string name="app_name">Student_Scheduler_App</string>
    <string name="_01_10_2024">01_10_2024</string>
    <string name="_01_01_24">01_01_24</string>
    <string name="term_2">Term_2</string>
    <string name="term_1">Term 1</string>
    <string name="term_3">Term_3</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="enter_start_date">Enter End Date</string>
    <string name="enter_term">Enter Term Name</string>
    <string name="__01_01_24">01/01/24</string>
    <string name="__01_10_2024">01/10/2024</string>
    <string name="term_1_">Term 1</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_date_start">Enter Start Date</string>
    <string name="enter_course_status">Enter Course Status</string>
    <string name="enter_course_status_">Enter Course Status</string>
    <string name="enter_instructor_name">Enter Instructor Name</string>
    <string name="enter_instructor_phone_number">Enter Instructor Phone Number</string>
    <string name="enter_instructor_email">Enter Instructor Email</string>
    <string name="enter_a_note_optional">Enter a Note (Optional)</string>
    <string name="type_of_assessment">Type of Assessment</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="start_date_ass">Start Date</string>
    <string name="end_date_ass">End Date</string>
</resources>