<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B00BCD4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/editCourseName"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/enter_course_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/enter_date_start"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/editCourseStartDate"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/enter_end_date"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/editCourseEndDate"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/enter_course_status_"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editCourseStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>

            <EditText
                android:id="@+id/instructorName"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/enter_instructor_name" />

            <EditText
                android:id="@+id/instructorNumber"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/enter_instructor_phone_number" />

            <EditText
                android:id="@+id/instructorEmail"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/enter_instructor_email" />

            <EditText
                android:id="@+id/optionalNote"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/enter_a_note_optional" />

            <Button
                android:id="@+id/editSaveBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:backgroundTint="#009688"
                android:text="Save"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>