<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B00BCD4">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/type_of_assessment"
            android:textSize="18sp">

        </TextView>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_name"
            android:textSize="18sp">

        </TextView>

        <EditText
            android:id="@+id/assessmentTitleInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

        </EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_ass"
            android:textSize="18sp" />

        <DatePicker
            android:id="@+id/assessmentEndDate"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>