<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B00BCD4">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/type_of_assessment"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <Spinner
            android:id="@+id/assessmentTypeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/assessmentTitleEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"></EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_ass"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/assessmentEndDateEdit"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:backgroundTint="#009688"
            android:text="Save"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>